DevTools: [Console] fix table formatting
The patch applies clear property to the console.table output so that
it does not overlap with source location (which is a float:right element)

BUG=465380
R=dgozman

Review URL: https://codereview.chromium.org/997813003

git-svn-id: svn://svn.chromium.org/blink/trunk@191712 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/console/consoleView.css
+++ b/front_end/console/consoleView.css
@@ -358,6 +358,10 @@
     white-space: pre-wrap;
 }
 
+.console-message-formatted-table {
+    clear: both;
+}
+
 .console-message-url {
     float: right;
     text-align: right;
